fix spacing of images

--- a/src/style.scss
+++ b/src/style.scss
@@ -546,7 +546,7 @@ a {
 }
 
 
-@media (min-width: 1000px) {
+@media (min-width: 1200px) {
 	.gallery-section {
 		grid-template-columns: repeat(3, 1fr);
 		column-gap: 4em;
